@@ -1,4 +1,5 @@
-/* Copyright (C) 2002-2014 Free Software Foundation, Inc.
+/* ABI compatibility for 'fork' symbol in libpthread ABI.
+   Copyright (C) 2002-2014 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@redhat.com>, 2002.
 
@@ -17,11 +18,55 @@
    <http://www.gnu.org/licenses/>.  */
 
 #include <unistd.h>
+#include <shlib-compat.h>
 
+/* libpthread once had its own fork, though there was no apparent reason
+   for it.  There is no use in having a separate symbol in libpthread, but
+   the historical ABI requires it.  For static linking, there is no need to
+   provide anything here--the libc version will be linked in.  For shared
+   library ABI compatibility, there must be __fork and fork symbols in
+   libpthread.so; so we define them using IFUNC to redirect to the libc
+   function.  */
 
-pid_t
-__fork (void)
+#if SHLIB_COMPAT (libpthread, GLIBC_2_0, GLIBC_2_20)
+
+# if HAVE_IFUNC
+
+static __typeof (fork) *
+__attribute__ ((used))
+fork_resolve (void)
+{
+  return &__libc_fork;
+}
+
+#  ifdef HAVE_ASM_SET_DIRECTIVE
+#   define DEFINE_FORK(name) \
+  asm (".set " #name ", fork_resolve\n" \
+       ".globl " #name "\n" \
+       ".type " #name ", %gnu_indirect_function");
+#  else
+#   define DEFINE_FORK(name) \
+  asm (#name " = fork_resolve\n" \
+       ".globl " #name "\n" \
+       ".type " #name ", %gnu_indirect_function");
+#  endif
+
+# else  /* !HAVE_IFUNC */
+
+static pid_t __attribute__ ((used))
+fork_compat (void)
 {
   return __libc_fork ();
 }
-strong_alias (__fork, fork)
+
+# define DEFINE_FORK(name) strong_alias (fork_compat, name)
+
+# endif  /* HAVE_IFUNC */
+
+DEFINE_FORK (fork_ifunc)
+compat_symbol (libpthread, fork_ifunc, fork, GLIBC_2_0);
+
+DEFINE_FORK (__fork_ifunc)
+compat_symbol (libpthread, __fork_ifunc, __fork, GLIBC_2_1_2);
+
+#endif
